--- a/style.css
+++ b/style.css
@@ -1,92 +1,119 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&family=Roboto&display=swap');
-
-* {
-  margin: 0;
-  padding: 0;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-.gameContainer {
-  display: flex;
-  justify-content: center;
-  margin-top: 18px;
+/* nav{
+    background-color: rgb(3, 163, 255);
+    color: white;
+    height: 65px;
+    font-size: 27px;
+    display: flex;
+    align-items: center;
+    padding: 0 12px;
+    font-family: 'Roboto', sans-serif;
 }
 
-.container {
-  display: grid;
-  grid-template-rows: repeat(3, 10vw);
-  grid-template-columns: repeat(3, 10vw);
-  font-family: 'Roboto', sans-serif;
-  position: relative;
+nav ul{
+    list-style-type: none;
+} */
+
+.gameContainer{ 
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
 }
 
-.box {
-  border: 2px solid black;
-  font-size: 8vw;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.container{
+    display: grid;
+    grid-template-rows: repeat(3, 10vw);
+    grid-template-columns: repeat(3, 10vw);
+    font-family: 'Roboto', sans-serif;
+    position: relative;
 }
 
-.box:hover {
-  background-color: rgb(242, 234, 250);
+.box{
+    border: 2px solid black;
+    font-size: 8vw;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.br-0 {
-  border-right: 0;
+.box:hover{
+    background-color: rgb(242, 234, 250);
 }
 
-.bl-0 {
-  border-left: 0;
+.info {
+    font-size: 22px;
 }
 
-.bt-0 {
-  border-top: 0;
+.gameInfo{
+    padding: 0 34px;
+    font-family: 'Baloo Bhaina 2', cursive;
+    text-align: center;
 }
 
-.bb-0 {
-  border-bottom: 0;
+.gameInfo h1{
+    font-size: 2.5rem;
 }
 
-@media screen and (max-width: 950px) {
-  .gameContainer {
-    flex-wrap: wrap;
-  }
-
-  .gameInfo {
-    margin-top: 34px;
-  }
-
-  .gameInfo h1 {
-    font-size: 1.5rem;
-  }
-
-  .container {
-    grid-template-rows: repeat(3, 20vw);
-    grid-template-columns: repeat(3, 20vw);
-  }
+.imgbox img{
+    width: 0;
+    transition: width 1s ease-in-out;
 }
 
-.line {
-  background-color: black;
-  height: 3px;
-  width: 0;
-  position: absolute;
-  background-color: #05c8f4;
-  transition: width 1s ease-in-out;
+.br-0{
+    border-right: 0;
 }
 
-.button{
-  text-align: center;
-  margin-top: 10rem;
+.bl-0{
+    border-left: 0;
 }
+
+.bt-0{
+    border-top: 0;
+}
+
+.bb-0{
+    border-bottom: 0;
+}
+
 #reset {
-  margin: 0 23px;
-  padding: 1px 18px;
-  background: white;
-  border-radius: 6px;
-  cursor: pointer;
-  font-family: 'Baloo Bhaina 2';
-  font-size: 15px;
-  font-weight: bolder;
+    margin: 0 23px;
+    padding: 1px 18px;
+    background: #f3e7f9;
+    border-radius: 6px;
+    cursor: pointer;
+    font-family: 'Baloo Bhaina 2';
+    font-size: 15px;
+    font-weight: bolder;
+}
+
+.line{
+    background-color: black;
+    height: 3px;
+    width: 0;
+    position: absolute;
+    background-color: #911d91;
+    transition: width 1s ease-in-out;
+}
+
+@media screen and (max-width: 950px)
+{
+    .gameContainer{
+        flex-wrap: wrap;
+    }
+    .gameInfo{
+        margin-top: 34px;
+    }
+    .gameInfo h1{
+        font-size: 1.5rem;
+    }
+    .container { 
+        grid-template-rows: repeat(3, 20vw);
+        grid-template-columns: repeat(3, 20vw);
+    }
 }
